package com.eventsystem.domain.queue;

public enum QueueStatus {
    INACTIVE, ACTIVE, DRAINING
}