classDiagram
    direction TB

%% ══════════════════════════════════════════
%% Virtual Queue domain:
%% Updated VirtualQueue design for current code
%% ══════════════════════════════════════════

    namespace Domain_Queue {

        class VirtualQueue
        class QueueId
        class QueueEntry
        class AdmissionToken
        class QueueStatus

    }

%% ══════════════════════════════════════════
%% AGGREGATE VirtualQueue:
%% One queue per event when activated.
%% Controls event-specific admission under load.
%% Status flow: INACTIVE -> ACTIVE -> INACTIVE / DRAINING
%% ══════════════════════════════════════════

    class VirtualQueue:::aggregate {
        <<Aggregate Root>>
        - QueueId queueId
        - EventId eventId
        - QueueStatus status
        - int loadThreshold
        - int maxConcurrentAdmissions
        - long version
        - LinkedList~QueueEntry~ waitingEntries
        - List~AdmissionToken~ admittedSet
        - int nextPositionCounter
        + activate() void
        + enqueue(BuyerReference) void
        + admitNext(int) List~BuyerReference~
        + revokeAdmission(BuyerReference) void
        + isAdmitted(BuyerReference) boolean
        + expireTokens() void
        + getOpenSlots() int
        + positionOf(BuyerReference) int
        + consumeTokenFor(BuyerReference) void
        + clearQueue() List~BuyerReference~
    }

%% ══════════════════════════════════════════
%% ENTITIES AND ENUMS
%% ══════════════════════════════════════════

    class QueueId:::idValueObject {
        <<ID - Value Object>>
    }

    class QueueEntry:::entity {
        <<Entity>>
        - BuyerReference visitorRef
        - Instant joinedAt
        - int position
        + getVisitorRef() BuyerReference
        + getPosition() int
    }

    class AdmissionToken:::entity {
        <<Entity>>
        - BuyerReference buyerRef
        - Instant expiresAt
        - boolean consumed
        + isExpired() boolean
        + markConsumed() void
        + isConsumed() boolean
        + getBuyerRef() BuyerReference
    }

    class QueueStatus:::enum {
        <<enumeration>>
        INACTIVE
        ACTIVE
        DRAINING
    }

%% ══════════════════════════════════════════
%% CORE DOMAIN RELATIONS
%% ══════════════════════════════════════════

    VirtualQueue "1" *-- "1" QueueId
    VirtualQueue "1" *-- "0..n" QueueEntry : waiting entries
    VirtualQueue "1" *-- "0..n" AdmissionToken : admitted tokens
    VirtualQueue --> QueueStatus

    QueueEntry ..> BuyerReference : waiting buyer
    AdmissionToken ..> BuyerReference : admitted buyer
    VirtualQueue ..> BuyerReference : queue actions

%% ══════════════════════════════════════════
%% EXTERNAL DOMAIN REFERENCES
%% ══════════════════════════════════════════

    namespace Domain_Order {
        class BuyerReference:::external
    }

    namespace Domain_Event {
        class EventId:::external
    }

%% ══════════════════════════════════════════
%% PERSISTENCE BOUNDARY / REPOSITORY ADAPTERS
%% Included to show how VirtualQueue aggregates are stored and loaded.
%% ══════════════════════════════════════════

    namespace Infrastructure_Persistence {
        class VirtualQueueRepository:::repository
    }

    class VirtualQueueRepository {
        <<Repository>>
        - ConcurrentMap~String, VirtualQueue~ store
    }

    VirtualQueueRepository ..> VirtualQueue : manages persistance
    VirtualQueue ..> EventId : Queue for Event tickets

%% ══════════════════════════════════════════
%% STYLING
%% ══════════════════════════════════════════

    classDef aggregate fill:#ffe8cc,stroke:#d9480f,stroke-width:2px,color:#000
    classDef entity fill:#ebfbee,stroke:#2f9e44,stroke-width:1px,color:#000
    classDef valueObject fill:#e7f5ff,stroke:#1c7ed6,stroke-width:1px,color:#000
    classDef idValueObject fill:#fff0f6,stroke:#c2255c,stroke-width:1px,color:#000
    classDef enum fill:#f3f0ff,stroke:#6741d9,stroke-width:1px,color:#000
    classDef external fill:#f1f3f5,stroke:#495057,stroke-width:1px,color:#000
    classDef repository fill:#e6fcf5,stroke:#0ca678,stroke-width:1px,color:#000
    classDef legend fill:#ffffff,stroke:#212529,stroke-width:1px,color:#000